--- a/app/views/data_explorer/index.html.erb
+++ b/app/views/data_explorer/index.html.erb
@@ -111,7 +111,7 @@
           <option value="per_metric">Per metric</option>
           <option value="per_metric_group_1">Amongst group 1</option>
           <option value="per_metric_group_2">Amongst group 2</option>
-          <option value="per_metric_granularity">Amongst granularity</option>
+          <option value="per_metric_interval">Amongst interval</option>
           <option value="per_metric_group_1_delta">Group 1 over time</option>
           <option value="per_metric_group_1_group_2_delta">Group 1+2 over time</option>
         </select>
