--- a/app/views/data_explorer/time_series/results/table/_40_totals_row.html.erb
+++ b/app/views/data_explorer/time_series/results/table/_40_totals_row.html.erb
@@ -2,17 +2,17 @@
   <% if @tbl_show_group_1_headers %><th scope="row">TOTAL</th><% end %>
   <%= tag.td if @tbl_show_group_2_headers %>
 
-  <% @composition.results.unique_interval_descriptors.each do |interval| %>
+  <% @composition.results.unique_interval_descriptors.each do |interval_descriptor| %>
     <% @composition.metrics.each do |metric| %>
       <% @composition.comparisons.each do |comparison| %>
         <% comparison.lookback.times do |j| %>
           <% rewind = -(comparison.lookback - j) %>
-          <% total = @composition.results.get_total_comparison(comparison, rewind, metric, interval) %>
+          <% total = @composition.results.get_total_comparison(comparison, rewind, metric, interval_descriptor) %>
           <td><%= number_with_delimiter(total) %></td>
         <% end %>
       <% end %>
 
-      <% total = @composition.results.get_total(metric, interval)%>
+      <% total = @composition.results.get_total(metric, interval_descriptor)%>
       <td><%= number_with_delimiter(total) %></td>
     <% end %>
   <% end %>
