Support rudimentary table sorting

--- a/app/views/data_explorer/dimensional/_results.html.erb
+++ b/app/views/data_explorer/dimensional/_results.html.erb
@@ -69,7 +69,7 @@
   @expand_group_2_member_descriptors << nil if @tbl_show_group_2_unknowns
 %>
 
-<table data-data-explorer--results-table-highlight-target="table">
+<table data-data-explorer--results-table-highlight-target="table" data-controller="data-explorer--results-table-sort">
   <colgroup>
     <%# Group 1 member labels %>
     <col>
