Add warning for clipped time series intervals

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -198,6 +198,10 @@ table {
     text-align: left;
   }
 
+  th.partial {
+    background: yellow;
+  }
+
   thead {
     th {
       position: sticky;
