--- a/app/views/data_explorer/dimensional/results/table/_40_group_row.html.erb
+++ b/app/views/data_explorer/dimensional/results/table/_40_group_row.html.erb
@@ -13,8 +13,9 @@
         <% min = @composition.results.get_min(metric, @composition.groups[0], group_1_member_descriptor) || 0 %>
         <% max = @composition.results.get_max(metric, @composition.groups[0], group_1_member_descriptor) || 0 %>
         <% range = (max||0) - (min||0) %>
+        <% mean = @composition.results.get_arith_mean(metric, group_1_member_descriptor) || 0 %>
 
-        <% title = "Min: #{number_with_delimiter(min)}\nMax: #{number_with_delimiter(max)}\nRange: #{number_with_delimiter(range)}" %>
+        <% title = "Mean: #{number_with_delimiter(mean)}\nMin: #{number_with_delimiter(min)}\nMax: #{number_with_delimiter(max)}\nRange: #{number_with_delimiter(range)}" %>
 
         <td title="<%= title %>"><%= number_with_delimiter total %></td>
       <% else %>
