--- a/app/views/data_explorer/dimensional/results/table/_10_group_headers.html.erb
+++ b/app/views/data_explorer/dimensional/results/table/_10_group_headers.html.erb
@@ -5,6 +5,10 @@
     <th colspan="<%= @composition.metrics.size %>" scope="colgroup">TOTAL</th>
   <% end %>
 
+  <% @meta&.each do |meta| %>
+    <td></td>
+  <% end %>
+
   <% @expand_group_2_member_descriptors.each do |group_2_member_descriptor| %>
     <%= group_table_header_tag(@composition, @composition.groups[1], group_2_member_descriptor, :colgroup) %>
   <% end %>
