--- a/app/views/data_explorer/dimensional/results/table/_20_metric_headers.html.erb
+++ b/app/views/data_explorer/dimensional/results/table/_20_metric_headers.html.erb
@@ -7,6 +7,10 @@
     <% end %>
   <% end %>
 
+  <% @meta&.each do |meta| %>
+    <td></td>
+  <% end %>
+
   <% @expand_group_2_member_descriptors.each do |_| %>
     <% @composition.metrics.each do |metric| %>
       <th scope="col"><%= metric.metric %></th>
