--- a/app/views/data_explorer/index.html.erb
+++ b/app/views/data_explorer/index.html.erb
@@ -67,8 +67,8 @@
       <fieldset id="groups">
         <legend>Groups</legend>
 
-        <% [1,2].each do |i| %>
-          <%= render partial: "data_explorer/dimensional/group_chooser", locals: {i: i} %>
+        <% [1,2].each do |group_num| %>
+          <%= render partial: "data_explorer/dimensional/group_chooser", locals: {group_num: group_num} %>
         <% end %>
       </fieldset>
 
