--- a/app/assets/stylesheets/data-explorer/data-explorer-temp.css
+++ b/app/assets/stylesheets/data-explorer/data-explorer-temp.css
@@ -36,7 +36,6 @@ form.nochrome {
 
 #global-data-parameters {
   grid-area: global-data-parameters;
-  background-color: #f3f3f3;
   padding: 8px;
 }
 
@@ -188,7 +187,7 @@ form:has(#granularity select[name=granularity] option[value=quarterly]:checked) 
 
 #export-btn {
   position: absolute;
-  top: 0;
+  top: 60px;
   right: 0;
   display: block;
   border: 4px solid red;
