--- a/app/views/data_explorer/_lens_wizard.html.erb
+++ b/app/views/data_explorer/_lens_wizard.html.erb
@@ -8,7 +8,7 @@
       </a>
     </li>
     <li>
-      <a href="/data-explorer?lens=dimensional">
+      <a href="/data-explorer?lens=timeSeries">
         Data Over Time
 
         <p>Use time series data to analyze how your podcasts perform over time</p>
